<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dlg_campo_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintNome"
        android:inputType="textPersonName"
        android:text="@string/Nome"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dlg_campo_valorP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintValor"
        android:inputType="numberDecimal"
        android:text="@string/valor" />

    <Button
        android:id="@+id/btn_dlg_prod_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atualizar" />

    <Button
        android:id="@+id/btn_dlg_prod_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar" />
</LinearLayout>