<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/candy"

    tools:context=".CadProduto">

    <android.support.v7.widget.CardView
        android:layout_width="355dp"
        android:layout_height="423dp"

        app:cardCornerRadius="60dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent">

            <EditText
                android:id="@+id/campo_Valor_cadProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:autofillHints="@string/autoNome"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/valor"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/botao_Cadastrar_cadProd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/campo_nome_cadProduto"
                tools:targetApi="o" />

            <Button
                android:id="@+id/botao_Cadastrar_cadProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/Botao_Cadastrar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_Cancelar_cadProd"
                app:layout_constraintTop_toBottomOf="@+id/campo_Valor_cadProduto" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cadProduto"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="cursive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_Cancelar_cadProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cancelar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/botao_Cadastrar_cadProd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/campo_Valor_cadProduto" />

            <EditText
                android:id="@+id/campo_nome_cadProduto"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginTop="76dp"
                android:autofillHints="@string/autoNome"
                android:ems="10"
                android:textAlignment="center"
                android:inputType="textPersonName"
                android:hint="@string/Nome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"
                tools:targetApi="o" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>