<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/candy"
    tools:context=".telaVendas">

    <android.support.v7.widget.CardView
        android:layout_width="368dp"
        android:layout_height="633dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ListView
                android:id="@+id/tl_venda_listView"
                android:layout_width="352dp"
                android:layout_height="293dp"
                android:layout_marginBottom="116dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/tl_vendas_dd_produto"
                android:layout_width="260dp"
                android:layout_height="33dp"


                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_vendas_dd_cliente" />

            <TextView
                android:id="@+id/tl_venda_txt_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tlvendas"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/tl_vendas_dd_cliente"
                android:layout_width="258dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"

                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_venda_txt_header" />

            <TextView
                android:id="@+id/tl_venda_txt_pedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_venda"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/tl_vendas_btn_add"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_vendas_dd_produto" />

            <Button
                android:id="@+id/tl_venda_btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/Cancelar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tl_venda_btn_cadastrar"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/tl_venda_btn_cadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/Botao_Cadastrar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tl_venda_btn_cancelar" />

            <TextView
                android:id="@+id/tl_venda_h_quantidade"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/quant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_venda_txt_header" />

            <ImageButton
                android:id="@+id/tl_vendas_btn_add"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription=""
                android:tint="@color/design_default_color_primary_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_venda_sp_quantidade"
                app:srcCompat="@android:drawable/ic_input_add" />

            <TextView
                android:id="@+id/tl_vendas_txt_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="3dp"
                android:text="@string/cliente"
                app:layout_constraintBottom_toTopOf="@+id/tl_vendas_dd_cliente"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tl_vendas_txt_produto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/prod"
                app:layout_constraintBottom_toTopOf="@+id/tl_vendas_dd_produto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_vendas_dd_cliente"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tl_vendas_txt_totPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/totPedido"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/tl_venda_btn_cancelar"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tl_venda_txt_totalPedido"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/tl_venda_btn_cadastrar"
                app:layout_constraintStart_toEndOf="@+id/tl_vendas_txt_totPedido" />

            <Spinner
                android:id="@+id/tl_venda_sp_quantidade"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_venda_h_quantidade" />

            <TextView
                android:id="@+id/textViewProduto"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="end"
                android:text="@string/prod"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/tl_venda_listView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewUnidade"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:gravity="end"

                android:text="@string/unid"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/tl_venda_listView"
                app:layout_constraintStart_toEndOf="@+id/textViewProduto" />

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:gravity="end"

                android:text="@string/total"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/tl_venda_listView"
                app:layout_constraintStart_toEndOf="@+id/textViewUnidade" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>